# OmarBit

./: .env.example  .gitignore  BLOCKERS.md  CLAUDE.md  LICENSE  README.md  omarbit-sentinel-chess-arena-mvp-builder-prompt.md  omarbit-sentinel-chess-arena-mvp-playbook.md  omarbit-sentinel-chess-arena-mvp-spec.md  package-lock.json  package.json  pytest.ini
apps/api/: .dockerignore  Dockerfile  auth.py  canary.py  db.py  elo.py  encryption.py  game_loop.py  instruction_sanitizer.py  main.py  match_engine.py  models.py  moderation.py  move_orchestrator.py  opening_book.py  orchestrator.py  pyproject.toml  requirements-dev-locked.txt  requirements-dev.txt  requirements-locked.txt  requirements.txt  run.py  safety_scanner.py  scheduler.py  stockfish.py
apps/api/migrations/: 001_baseline.sql  001_baseline_down.sql  002_ai_profile_expansion.sql  002_ai_profile_expansion_down.sql  003_match_commentary.sql  003_match_commentary_down.sql
apps/api/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  gpt_provider.py  grok_provider.py  key_validator.py  models.py  prompts.py  registry.py
apps/api/routers/: ai_profiles.py  feature_flags.py  leaderboard.py  matches.py  replay.py  sse.py  tournaments.py
apps/api/tests/: conftest.py  test_ai_profiles.py  test_auth.py  test_canary.py  test_elo.py  test_encryption.py  test_feature_flags.py  test_game_loop.py  test_health.py  test_instruction_sanitizer.py  test_leaderboard.py  test_match_engine.py  test_matches.py  test_moderation.py  test_move_orchestrator.py  test_opening_book.py  test_orchestrator.py  (+6 more)
(+41 files in other folders)
